fix: table name overflow

--- a/src/components/TablesPane/style.module.scss
+++ b/src/components/TablesPane/style.module.scss
@@ -1,3 +1,8 @@
 .table-entry {
 	cursor: pointer;
+	position: relative;
+}
+
+.viewport > div {
+	display: unset !important;
 }
